--- a/Вьсєволожьскъ.mw
+++ b/Вьсєволожьскъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1892
 | map = 
 |}}
-'''Всѥволожскъ''' ({{Lang-ru|Всеволожск}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы]] области [[Всѥволожьска чѧсть|Всѥволожьскы]] чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 45 тысѭщь. Основанъ ѥстъ лѣта 1892, нареченъ градъ 1963 ѥстъ.
+'''Всѥволожскъ''' ({{Lang-ru|Всеволожск}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы]] области [[Всѥволожска чѧсть|Всѥволожскы]] чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 45 тысѭщь. Основанъ ѥстъ лѣта 1892, нареченъ градъ 1963 ѥстъ.
 
 [[Катигорї:Гради]]
 [[Катигорї:Рѡсї]]
