--- a/Єкатєрїнбоургъ.mw
+++ b/Єкатєрїнбоургъ.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ =Екатерїнбѹргъ
 | знамѧ= 
 | знакъ = Coat_of_Arms_of_Yekaterinburg_(Sverdlovsk_oblast)_(1998).png
-| Дрьжава = Рѡсї
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = 
 | Людии = 1337 тысѫщь
 | Основанъ = 1723
