--- a/Варна.mw
+++ b/Варна.mw
@@ -26,7 +26,7 @@
 [[en:Varna]]
 [[eo:Varna]]
 [[es:Varna (Bulgaria)]]
-[[et:Varna]]
+[[et:Varna (Bulgaaria)]]
 [[fi:Varna]]
 [[fr:Varna (Bulgarie)]]
 [[he:ורנה]]
