*Empty MediaWiki Message*

--- a/Варна.mw
+++ b/Варна.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Варна
 | знамѧ= 
 | знакъ = Varna COA.jpg
-| Дрьжава = Блъгарїѩ знамѧ Блъгарї
+| Дрьжава = {{Блъгарїѩ знамѧ}} Блъгарї
 | Глава = 
 | Людии =  400 тысѧщь
 | Основанъ = 
