--- a/Волховъ_·_градъ.mw
+++ b/Волховъ_·_градъ.mw
@@ -1,12 +1,12 @@
 {{Градъ|Имѧ = Волховъ
 | знамѧ= Flag of Volkhov (Leningrad oblast).png
 | знакъ = Coat of Arms of Volkhov (Leningrad oblast).png
-| Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
+| Дрьжава = {{Рѡсїѩ знамѧ}} [[Рѡсї]]
 | Глава = 
 | Людии = 46,1 тысѫщь
 | Основанъ = 1693
 | map = 
 |}}
 {{Дрѹѕи съмысли|Волховъ}}
-'''Волховъ''' ({{lang-ru|Волхов}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Волховьска чѧсть|Волховьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1918, нареченъ градъ лѣта 1933 ѥстъ. Имѧ Волхова до лѣта 1933 Званъка, а о лѣта 1933 до лѣта 1940 Волховъстрои бѣаше. Построѥнъ ѥстъ рѣцѣ [[Волховъ (рѣка)|Волховѣ]]. Людии обитаѥтъ 46 тысѫщь.
+'''Волховъ''' ({{lang-ru|Волхов}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Волховьска чѧсть|Волховьскы чѧсти]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1918, нареченъ градъ лѣта 1933 ѥстъ. До лѣта 1933 дѣлательско селѥниѥ нарицаѥмо Званъка ({{Lang-ru|Званка}}) бѣ, с лѣта 1933 до лѣта 1940 именьмь Волховъстрои ({{Lang-ru|Волховстрой}}) бѣ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховѣ]] ѥстъ. Людии обитаѥтъ 46 тысѫщь.
 [[Category:Лениноградьска область]][[Category:Гради]]
