*Empty MediaWiki Message*

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -5,10 +5,31 @@
 | Глава = 
 | Людии = 4500 тысѫщь
 | Основанъ = 1703
-| Харта = 
+| Харта = [[Видъ:Spb all districts 2005 abc rus.svg|350px|]]
 |}}
 
 '''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}}) основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
+
+== Санкт-Петербѹрга чѧсти ==
+
+# Адмиралтѥиска чѧсть
+# Василѥостровьска чѧсть
+# Выборгьска чѧсть
+# Калининьска чѧсть
+# Кировьска чѧсть
+# Колпиньска чѧсть
+# Красногвардѥиска
+# Красносельска чѧсть
+# Кронштадтьска чѧсть
+# Курортьска чѧсть <!--Курортный район-->
+# Москъвьска чѧсть
+# Невьска чѧсть
+# Петроградьска чѧсть
+# Петродворцовьска чѧсть
+# Приморьска чѧсть
+# Пѹшкиньска чѧсть
+# Фрѹнзеньска чѧсть
+# Срѣдьн чѧсть
 
 == Зьри такожде ==
 {{commonscat|Saint Petersburg}}
