/* Санкт-Петербѹрга чѧсти */

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -14,7 +14,7 @@
 
 # Адмиралтѥиска чѧсть
 # Василѥостровьска чѧсть
-# Выборгьска чѧсть
+# Выборжьска чѧсть
 # Калининьска чѧсть
 # Кировьска чѧсть
 # Колпиньска чѧсть
