--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -8,7 +8,11 @@
 | Харта = [[Видъ:Spb all districts 2005 abc rus.svg|350px|]]
 |}}
 
-'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}}) основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
+'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь.
+
+== Їсторї ==
+
+Градъ основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
 
 == Санкт-Петербѹрга чѧсти ==
 
