*Empty MediaWiki Message*

--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -8,7 +8,7 @@
 | Харта = [[Видъ:Spb all districts 2005 abc rus.svg|350px|]]
 |}}
 
-'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь.
+'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь. Санкт-Петербѹргъ бол҄ии градъ Рѡсїѩ (по Москъвѣ) ѥстъ
 
 == Їсторї ==
 
