--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -7,7 +7,8 @@
 | Основанъ = 1590
 | Харта = 
 |}}
-'''Саратовъ''' [[Рѡсї|Рѡсїѩ]] градъ, [[Саратовьска область|Саратовьскы области]] главьнъ градъ ѥстъ. Построѥна рѣцѣ [[Вльга|Вльsѣ]] ѥстъ. Основана лѣта 1590, градъ съ лѣта 1780 ѥстъ. Людии обитаѥтъ 870 тысѧщѧ. 
+'''Саратовъ''' ({{lang-ru|Саратов}}) [[Рѡсї|Рѡсїѩ]] [[Саратовьска область|Саратовьскы области]] главьнъ градъ ѥстъ. Построѥн рѣцѣ [[Вльга|Вльsѣ]] ѥстъ. Основан лѣта 1590, нареченъ градъ съ лѣта 1780 ѥстъ. Людии обитаѥтъ 870 тысѫщь. 
+
 == Зьри такожде ==
 
 [[Category:Гради]]
