--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1590
 | Харта = 
 |}}
-'''Саратовъ''' ({{lang-ru|Саратов}}) [[Рѡсї|Рѡсїѩ]] [[Саратовьска область|Саратовьскы области]] главьнъ градъ ѥстъ. Построѥн рѣцѣ [[Вльга|Вльsѣ]] ѥстъ. Основан лѣта 1590, нареченъ градъ съ лѣта 1780 ѥстъ. Людии обитаѥтъ 870 тысѫщь. 
+'''Саратовъ''' ({{lang-ru|Саратов}}) [[Рѡсї|Рѡсїѩ]] [[Саратовьска область|Саратовьскы области]] главьнъ градъ ѥстъ. Построѥнъ рѣцѣ [[Вльга|Вльsѣ]] ѥстъ. Основанъ лѣта 1590, нареченъ градъ съ лѣта 1780 ѥстъ. Людии обитаѥтъ 870 тысѫщь. 
 
 == Зьри такожде ==
 
