*Empty MediaWiki Message*

--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -1,6 +1,6 @@
 {{Градъ|Имѧ = Саратовъ
-| знамѧ= Flag_of_Saratov_(Saratov_oblast).png
-| знакъ = Coat_of_Arms_of_Saratov_(Saratov_oblast).png
+| знамѧ= Flag of Saratov.png
+| знакъ = Coat of Arms of Saratov.png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = Павелъ Ипатовъ
 | Людии = 870 тысѫщи
