--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -8,11 +8,13 @@
 | Харта = [[Видъ:Spb all districts 2005 abc rus.svg|350px|]]
 |}}
 
-'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь. Санкт-Петербѹргъ бол҄ии градъ Рѡсїѩ (по Москъвѣ) ѥстъ
+'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь. Санкт-Петербѹргъ бол҄ии градъ Рѡсїѩ по Москъвѣ ѥстъ. Градъ сѧ положениѥмь самостотел҄ьнѫ  съвѫзьнѫ ѥдиницѫ одѣлѥтъ.
 
 == Їсторї ==
+[[Видъ:Смольный.jpg|thumb|left|Смольнъ Инститѹтъ, иде Санкт-Петрбѹрга властьни ѹстрои прѣбываѭтъ]]
+Градъ основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] [[стольнъ градъ]] междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]].
 
-Градъ основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] стольнъ градъ междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]]. Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
+Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
 
 == Санкт-Петербѹрга чѧсти ==
 
