--- a/Санктъ_Пєтєрбоургъ.mw
+++ b/Санктъ_Пєтєрбоургъ.mw
@@ -2,24 +2,24 @@
 | знамѧ= Flag of St Petersburg (Russia).png
 | знакъ = Coat of Arms of Saint Petersburg large (2003).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = 
+| Глава = Валентина Матвиѥнко
 | Людии = 4500 тысѫщь
 | Основанъ = 1703
 | Харта = [[Видъ:Spb all districts 2005 abc rus.svg|350px|]]
 |}}
 
-'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}})  ѥстъ градъ [[Рѡсї|Рѡсїѩ]]. Людии обитаѥтъ 4500 тысѫщь. Санкт-Петербѹргъ бол҄ии градъ Рѡсїѩ по Москъвѣ ѥстъ. Градъ сѧ положениѥмь самостотел҄ьнѫ  съвѫзьнѫ ѥдиницѫ одѣлѥтъ.
+'''Санкт-Петербѹргъ''' ({{Lang-ru|Санкт-Петербург}}, {{Lang-cu|Свѧтъ Петра градъ}}) [[Рѡсї|Рѡсїѩ]] градъ ѥстъ. Людии обитаѥтъ 4500 тысѫщь. Санкт-Петербѹргъ бол҄ии градъ Рѡсїѩ по Москъвѣ ѥстъ. Градъ сѧ положениѥмь самостотел҄ьнѫ  съвѫзьнѫ ѥдиницѫ одѣлѥтъ.
 
 == Їсторї ==
-[[Видъ:Смольный.jpg|thumb|left|Смольнъ Инститѹтъ, иде Санкт-Петрбѹрга властьни ѹстрои прѣбываѭтъ]]
-Градъ основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] [[стольнъ градъ]] междѹ 1712—1918 годы бѣаше. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]].
+[[Видъ:Смольный.jpg|thumb|left|«Смольноѥ Їнстїтѹто», Санкт-Петрбѹрга властии домъ]]
+Градъ основанъ ѥстъ 1703 года Рѡсїискомь цѣсарѥмь [[Петръ Великыи|Петромь А]]. [[Рѡсї|Рѡсїѩ]] [[стольнъ градъ]] междѹ 1712—1918 лѣты бѣ. Санкт-Петербѹргъ построѥнъ ѥсть рѣцѣ [[Нева|Невѣ]].
 
-Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣаше. Главьнъ градъ [[Лениноградьска область|Лениноградьскы]] области и градъ-ирѡи ѥстъ.
+Санкт-Петербѹрга имѧ о лѣта 1914 до лѣта 1924 Петроградъ, а до лѣта 1991 [[Лениноградъ]] бѣ. [[Лениноградьска область|Лениноградьскы]] области главьнъ градъ. Санкт-Петербѹргъ [[ирѡи градъ]] ѥстъ.
 
 == Санкт-Петербѹрга чѧсти ==
 
 # Адмиралтѥиска чѧсть
-# Василѥостровьска чѧсть
+# Василїѥостровьска чѧсть
 # Выборжьска чѧсть
 # Калининьска чѧсть
 # Кировьска чѧсть
@@ -27,12 +27,12 @@
 # Красногвардѥиска
 # Красносельска чѧсть
 # Кронштадтьска чѧсть
-# Курортьска чѧсть <!--Курортный район-->
+# Кѹрортьска чѧсть
 # Москъвьска чѧсть
 # Невьска чѧсть
 # Петроградьска чѧсть
-# Петродворцовьска чѧсть
-# Приморьска чѧсть
+# Петродворьчьска чѧсть
+# Примор҄ьска чѧсть
 # Пѹшкиньска чѧсть
 # Фрѹнзеньска чѧсть
 # Срѣдьн чѧсть
