Града главы имѧ исправихъ.

--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= Flag of Saratov.png
 | знакъ = Coat of Arms of Saratov.png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = Павелъ Ипатовъ
+| Глава = Павьлъ Ипатовъ
 | Людии = 870 тысѫщи
 | Основанъ = 1590
 | Харта = 
