--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -3,7 +3,7 @@
 | знакъ = Coat of Arms of Saratov.png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
 | Глава = Павьлъ Ипатовъ
-| Людии = 870 тысѫщи
+| Людии = 870 тысѫщь
 | Основанъ = 1590
 | Харта = 
 |}}
