Мѣнихъ, ѹкратихъ нъ допьсахъ. Блазны исправихъ.

--- a/Блъгарїꙗ.mw
+++ b/Блъгарїꙗ.mw
@@ -10,8 +10,7 @@
 | Почѧта = 1908
 }}
 
-'''Блъгарї''' ({{Lang-bg|България}}) [[истокъ|источьнъ]] [[Балкани|Балканъ]] [[страна]] и [[дръжава]] ѥстъ. Блъгарїѩ [[стольнъ градъ]] [[Софї]] ѥстъ. Дръжавьнъ ѩзыкъ Блъгарїѩ ѥстъ [[Блъгарьскъ ѩзыкъ|ѩзыкъ блъгарьскъ]]. Блъгарїи людии 7 леѡдръ обитаѥтъ.
-1878 годѣ Блъгарї стала ѥстъ пакы самостотел҄ьна дрьжава.
+'''Блъгарї''' или Блъгарї Димократї ({{Lang-bg|България, Република България}}) [[истокъ|источьнъ]] [[Балкани|Балканъ]] [[дръжава]] ѥстъ. [[Стольнъ градъ]] [[Софї]] ѥстъ. Дръжавьнъ [[Блъгарьскъ ѩзыкъ]] ѥстъ. Людии 7 леѡдръ обитаѥтъ. Самостотѣльна дрьжава от [[Османьска аѵтократорї|Османьскы аѵтократоріѩ]] съ лѣта 1908 ѥстъ.
 
 == Зьри такожде ==
 {{commonscat|Bulgaria}}
