--- a/Влькъ_Стєфановищь_Караджищь.mw
+++ b/Влькъ_Стєфановищь_Караджищь.mw
@@ -1,5 +1,5 @@
 [[Image:VukKaradzic.jpg|right|thumb|Влькъ Караджищъ]]
-'''Влькъ Стефановищь Караджищь''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Вук Стефановић Караџић'', [[Ноемврїи, 7 дьнь|Ноемврї 7]], [[1787]] года — [[Феврѹарї 7 дьнь|Феврѹарї 7]], [[1864]]) ѥдинъ о наивеличаишиихъ [[Срьби|срьбьскъ]] [[ѩзыковѣдъ]] бѣаше.
+'''Влькъ Стефановищь Караджищь''' ([[Срьбьскъ ѩзыкъ|срьбьскы]]: ''Вук Стефановић Караџић'', [[Ноемврїи, 7 дьнь|Ноемврї 7]], [[1787]] года — [[Феврѹарї 7 дьнь|Феврѹарї 7]], [[1864]]) ѥдинъ наивеличаишиихъ [[Срьби|срьбьскъ]] [[ѩзыковѣдъ]] бѣаше.
 
 [[Category:Срьби]]
 [[Category:Людиѥ]]
