--- a/Коуманово.mw
+++ b/Коуманово.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1519
 | Харта = [[Видъ:MK Kumanovo.png|250px]]
 }}
-'''Кѹманово''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии 105 484 обитаѥтъ. Кѹманово бол҄ии градъ Македонїѩ по [[Съкопиѥ|Съкопи]] ѥстъ
+'''Кѹманово''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии 105 484 обитаѥтъ. Кѹманово Македонїѩ бол҄ии градъ по [[Съкопиѥ|Съкопии]] ѥстъ
 [[Category:Гради]]
 
 [[bg:Куманово (град)]]
