*Empty MediaWiki Message*

--- a/Саратовъ.mw
+++ b/Саратовъ.mw
@@ -2,7 +2,7 @@
 | знамѧ= Flag of Saratov.png
 | знакъ = Coat of Arms of Saratov.png
 | Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = Павьлъ Ипатовъ
+| Глава = Павьлъ Ѷпатовъ
 | Людии = 870 тысѫщь
 | Основанъ = 1590
 | Харта = 
