*Empty MediaWiki Message*

--- a/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
+++ b/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Съвѣтьскыихъ Социалистичьскыихъ Димократїѩ Съвѫзъ <br>Союз Советских Социалистических Республик
-| знамѧ= [[Видъ:Flag of USSR.png|150px|border|100px]]
-| знакъ = [[image:Coat of Arms of the USSR.png|80px]]
+| знамѧ= [[Видъ:Flag of USSR.svg|150px|border|100px]]
+| знакъ = [[image:Coat of Arms of the USSR.svg|80px]]
 | map = ussr-map.png
 | Стольнъ градъ = [[Москъва]]
 | Ѩзыкъ = [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]
