--- a/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
+++ b/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Съвѣтьскыихъ Социалистичьскыихъ Димократїѩ Съвѫзъ <br>Союз Советских Социалистических Республик
+{{Дрьжава|name = Съвѣтьскыихъ Социалистичьскыихъ Димократїи Съвѫзъ <br>Союз Советских Социалистических Республик
 | знамѧ= [[Видъ:Flag of USSR.png|150px|border|100px]]
 | знакъ = [[image:Coat of Arms of the USSR.png|80px]]
 | map = ussr-map.png
@@ -6,11 +6,11 @@
 | Ѩзыкъ = [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]
 | Почѧта = 1922 
 }}
-'''СССР''' или '''Съвѣтьскыихъ Социалистичьскыихъ Димократїѩ Съвѫзъ''' ({{Lang-ru|СССР, Союз Советских Социалистических Республик}}) дрьжава распадшаяся ѥстъ.
+'''Съвѣтьскыихъ Социалистичьскыихъ Димократїи Съвѫзъ''' ('''ССДС''', {{Lang-ru|СССР, Союз Советских Социалистических Республик}}) въстока [[Еѵрѡпа|Еѵрѡпы]] и сѣвера [[Асї|Асїѩ]] дрьжава бѣ.
 
 == Їсторї ==
 
-Дьржава сия почата бѣ 1922 годѣ послѣди ѣдиненїя РСФСР, БССР, УССР и ЗСФСР. Распалась в 1991 годѣ
+Сътворѥна лѣта 1922 по ѥдинѥнии [[съвѣтьска власть|съвѣтьскъ]] [[Рѡсї|Рѡсїѩ]], [[Ѹкраина|Ѹкраины]], [[Бѣла Рѹсь|Бѣлы Рѹси]] и [[Закаѹѵкасїиская Съвѫзьна Димократиї|Закаѵкасїискы Съвѫзьны Димократїѩ]].
 
 == Зьри такожде==
 
