надо объяснить участнику, что ежели на Викискладе картинки уже есть, то грузить их не надо

--- a/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
+++ b/Съвѣтьскъ_Социалистичьскъ_Димократїи_Съвѫꙁъ.mw
@@ -1,7 +1,7 @@
 {{Дрьжава|name = Съвѣтьскыихъ Социалистичьскыихъ Димократїи Съвѫзъ <br>Союз Советских Социалистических Республик
-| знамѧ= [[Видъ:Flag of USSR.png|150px|border|100px]]
-| знакъ = [[image:Coat of Arms of the USSR.png|80px]]
-| map = ussr-map.png
+| знамѧ= [[Видъ:Flag of the Soviet Union.svg|150px|border|100px]]
+| знакъ = [[image:Coat of arms of the Soviet Union.svg|80px]]
+| map = LocationUSSR.png
 | Стольнъ градъ = [[Москъва]]
 | Ѩзыкъ = [[ѩзыкъ рѹсьскъ|рѹсьскъ ѩзыкъ]]
 | Почѧта = 1922 
@@ -13,7 +13,8 @@
 Сътворѥна лѣта 1922 по ѥдинѥнии [[съвѣтьска власть|съвѣтьскъ]] [[Рѡсї|Рѡсїѩ]], [[Ѹкраина|Ѹкраины]], [[Бѣла Рѹсь|Бѣлы Рѹси]] и [[Закаѹѵкасїиская Съвѫзьна Димократиї|Закаѵкасїискы Съвѫзьны Димократїѩ]].
 
 == Зьри такожде==
-
+{{commonscat|Soviet Union}}
+[[Category:Страны]]
 [[af:Sowjetunie]]
 [[als:Union der Sozialistischen Sowjetrepubliken]]
 [[an:Unión de Republicas Sozialistas Sobieticas]]
