*Empty MediaWiki Message*

--- a/Сєртолово.mw
+++ b/Сєртолово.mw
@@ -7,4 +7,4 @@
 | Основанъ = 1936
 | map =
 |}}
-'''Сертолово''' ({{lang-ru|Сертолово}}, отъ [[Сѹмь|сѹмьскаѥго]] имени ''Сироттала'' сѫтъ) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ лѣта 1936 ѥстъ, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь.
+'''Сертолово''' ({{lang-ru|Сертолово}}, отъ [[Сѹмьскъ ѩзыкъ|сѹмьскаѥго]] имени ''Сироттала'' сѫтъ) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ лѣта 1936 ѥстъ, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь.
