--- a/Сєртолово.mw
+++ b/Сєртолово.mw
@@ -7,4 +7,6 @@
 | Основанъ = 1936
 | map =
 |}}
-'''Сертолово''' ({{lang-ru|Сертолово}}, отъ [[Сѹмьскъ ѩзыкъ|сѹмьскаѥго]] имени ''Сироттала'' сѫтъ) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] ѥстъ. Основанъ лѣта 1936 ѥстъ, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь.
+'''Сертолово''' ({{lang-ru|Сертолово}}, отъ [[Сѹмьскъ ѩзыкъ|сѹмьскаѥго]] имени ''Sierattala'' сѫтъ) градъ [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Всѥволожска чѧсть|Всѥволожскы чѧсти]] ѥстъ. Основанъ лѣта 1936 ѥстъ, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь. Село Сиротала помѣновена запрьва лѣтописи вѣцѣ ї҃ѕ ѥстъ.
+[[Category:Лениноградьска область]]
+[[ru:Сертолово]]
