--- a/Англїискъ_ѩꙁꙑкъ.mw
+++ b/Англїискъ_ѩꙁꙑкъ.mw
@@ -6,7 +6,7 @@
 {{commonscat|English language}}
 [[Катигорї:Ѩзыци]]
 
-[[af:Engels (taal)]]
+[[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
 [[an:Idioma anglés]]
