--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -1,9 +1,45 @@
 [[Видъ:RussianLanguageMap.png|thumb]]
 '''Рѹсьскъ ѩзыкъ''' ({{Lang-ru|русский язык}}) [[Рѡсї|Рѡсїѩ]] и [[Бѣла Рѹсь|Бѣлы Рѹси]] дрьжавьнъ ѩзыкъ ѥстъ. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь междѹ 300 и 350 леѡдръ сѫтъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ.
 == Рѹсьска азъбѹкы  ==
-<div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Бб Вв Гг Дд Ее Ёё Жж Зз Ии Йй Кк Лл Мм Нн Оо Пп Рр Сс Тт Уу Фф Хх Цц Чч Шш Щщ Чч Ъъ Ыы Ьь Ээ Юю Яя
-</div>
+{| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
+|-----
+! Бѹкы !! звѫкъ
+| width="1" rowspan="22" | &nbsp;
+! Бѹкы !! звѫкъ
+| width="1" rowspan="22" | &nbsp;
+! Бѹкы !! звѫкъ
+|-----
+| А а || [a] ||| О о || [o] ||| Э э || [e]
+|-----
+| Б б || [b], [bʲ] ||| П п  || [p], [pʲ] ||| Ю ю || [ju], [ʲu]
+|-----
+| В в || [v], [vʲ] ||| Р р || [r], [rʲ] ||| Я я || [ja], [ʲa]
+|-----
+| Г г || [g] ||| С с || [s], [sʲ]
+|-----
+| Д д || [d], [dʲ] ||| Т т || [t], [tʲ]
+|-----
+| Е е || [je], [ʲe] || У у || [u]
+|-----
+| Ё ё || [jo], [ʲo] || Ф ф || [f], [fʲ]
+|-----
+| Ж ж  || [ʐ] || Х х || [x]
+|-----
+| З з || [z], [zʲ] || Ц ц || [ʦ]
+|-----
+| И и || [i], [ʲi] || Ч ч || [ʨː]
+|-----
+| Й й || [j] || Ш ш  || [ʂ]
+|-----
+| К к || [k], [kʲ] || Щ щ || [ɕː]
+|-----
+|Л л  || [l], [lʲ] || Ъ ъ  || -
+|-----
+| М м || [m], [mʲ] || Ы ы || [ɨ]
+|-----
+| Н н || [n], [nʲ] || Ь ь || [ʲ]
+|-----
+|}
 
 == Зьри такожде ==
 {{InterWiki|ru|Заглавная страница||рѹсьскыимь}}
