*Empty MediaWiki Message*

--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-[[Видъ:RussianLanguageMap.png|thumb]]
+[[Видъ:RussianLanguageMap.png|thumb|Рѹсьскаѥго ѩзыка просторъ]]
 '''Рѹсьскъ ѩзыкъ''' ({{Lang-ru|русский язык}}) [[Рѡсї|Рѡсїѩ]] и [[Бѣла Рѹсь|Бѣлы Рѹси]] дрьжавьнъ ѩзыкъ ѥстъ. Сыновл҄ь ѩзыкъ [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥго рѹсьскаѥго ѩзыка]], от ѥго же [[Ѹкраиньскъ ѩзыкъ|ѹкраиньскъ]] и [[Бѣлорѹсьскъ ѩзыкъ|бѣлорѹсьскъ]] ѩзъци сѫтъ. Глаголѭщь людии же с҄имь ѩзыкомь междѹ 300 и 350 леѡдръ сѫтъ. Ѥдинъ и шести епїсимьнъ и дѣльнъ ѩзыкъ [[Ѥдьнѥнъ народъ съвѣтъ|ѤНС]] ѥстъ.
 == Рѹсьска азъбѹкы  ==
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
