--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -8,6 +8,7 @@
 | Харта = [[Видъ:CroatiaGradZagreb.png]]
 |}}
 '''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥстъ. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥстъ. Загребъ основанъ ѥстъ 1094, градъ съ лѣта 1242 ѥстъ. Града имѧ Градьцъ бѣаше.
+[[Видъ:Zagrzeb stare miasto.jpg|thumb|left]]
 
 {{commonscat|Zagreb}}
 [[Category:Гради]]
