--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -5,7 +5,7 @@
 | Глава = Миланъ Бандищь
 | Людии = 779145
 | Основанъ = 1094
-| Харта = [[Видъ:CroatiaGradZagreb.png]]
+| Харта = [[Видъ:CroatiaGradZagreb.png|Загреба видъ]]
 |}}
 '''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥстъ. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥстъ. Загребъ основанъ ѥстъ 1094, градъ съ лѣта 1242 ѥстъ. Града имѧ Градьцъ бѣаше.
 [[Видъ:Zagrzeb stare miasto.jpg|thumb|left]]
