--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -5,10 +5,10 @@
 | Глава = Миланъ Бандищь
 | Людии = 779145
 | Основанъ = 1094
-| Харта = [[Видъ:CroatiaGradZagreb.png|Загреба видъ]]
+| Харта = [[Видъ:CroatiaGradZagreb.png]]
 |}}
 '''Загребъ''' ([[Хръватьскъ ѩзыкъ|хръватьскы]] ''Zagreb'') [[Хръватьска|Хръватьскы]] стольнъ градъ ѥстъ. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥстъ. Загребъ основанъ ѥстъ 1094, градъ съ лѣта 1242 ѥстъ. Града имѧ Градьцъ бѣаше.
-[[Видъ:Zagrzeb stare miasto.jpg|thumb|left]]
+[[Видъ:Zagrzeb stare miasto.jpg|thumb|left|Загреба видъ]]
 
 {{commonscat|Zagreb}}
 [[Category:Гради]]
