--- a/Сєртолово.mw
+++ b/Сєртолово.mw
@@ -7,6 +7,6 @@
 | Основанъ = 1936
 | map =
 |}}
-'''Сертолово''' ({{lang-ru|Сертолово}}, [[Сѹмьскъ ѩзыкъ|сѹмьска]] ѩзыка слово ''Sirottala'') [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Всѥволожска чѧсть|Всѥволожскы чѧсти]] градъ ѥстъ. Основанъ лѣта 1936, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь. Село Сироттала помѣновено запрьва лѣтописи вѣцѣ ї҃ѕ ѥстъ.
+'''Сертолово''' ({{lang-ru|Сертолово}}, о [[Сѹмьскъ ѩзыкъ|сѹмьска]] вьси имени ''Sirottala'') [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Всѥволожска чѧсть|Всѥволожскы чѧсти]] градъ ѥстъ. Основанъ лѣта 1936, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь. Село Сироттала помѣновено запрьва лѣтописи вѣцѣ ї҃ѕ ѥстъ.
 [[Category:Лениноградьска область]]
 [[ru:Сертолово]]
