--- a/Сєртолово.mw
+++ b/Сєртолово.mw
@@ -7,7 +7,7 @@
 | Основанъ = 1936
 | map =
 |}}
-'''Сертолово''' ({{lang-ru|Сертолово}}, сѫще имѧ [[Сѹмьскъ ѩзыкъ|сѹмьскы]] вьси ''Sirottala'') [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Всѥволожска чѧсть|Всѥволожскы чѧсти]] градъ ѥстъ. Основанъ лѣта 1936, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь. Село Сироттала помѣновено запрьва лѣтописи вѣцѣ ї҃ѕ ѥстъ.
+'''Сертолово''' ({{lang-ru|Сертолово}}, прежде сѫщеѥ ''Сироттала'' [[Сѹмь|сѹмьска]] вьсь, {{Lang-fi|Sirottala}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Всѥволожска чѧсть|Всѥволожскы чѧсти]] градъ ѥстъ. Основанъ лѣта 1936, нареченъ градъ съ лѣта 1998 ѥстъ. Людии обитаѥтъ 40,6 тысѫщь. Сироттала вьсь помѣновена запрьва лѣтописи вѣцѣ ї҃ѕ ѥстъ.
 [[Category:Лениноградьска область]]
 
 [[en:Sertolovo]]
