--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -12,7 +12,9 @@
 '''Ондѹ́расъ''' ({{Lang-es|Honduras}}), епїсимьно имѧ '''Димократї Ондѹрасъ''' ({{lang-es|República de Honduras}}), [[Срѣдьн Амерїка|Срѣдьнѩ Амерїкы]] дрьжава ѥстъ. Стольнъ градъ [[Тегѹсигалпа]] ѥстъ. Дрьжавьнъ ѩзыкъ [[Їспанїискъ ѩзык|їспанїискъ]] ѥстъ. Людии обитаѥтъ 6,9 леѡдръ.
 
 == Їcторї ==
+[[Видъ:Honduras 1866A.svg|thumb|left|Онѹдраса знамѧ (1866)]]
 Лѣта 1525 землѩ въшьли бѣашѧ въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ чѧсть [[Меѯика|Меѯици]] сталъ бѣ. О лѣта 1823 до лѣта 1839  Ондѹрасъ съставѣ Ѥдьнѥнъ Дрьжавъ Срѣднѩ Америци бѣ. Лѣта 1839 Ондѹрасъ сътворѥнъ самостотельна дрьжава ѥстъ.
+
 == Зьри такожде ==
 
 {{commonscat|Honduras}}
