--- a/Ондоурасъ.mw
+++ b/Ондоурасъ.mw
@@ -13,7 +13,7 @@
 
 == Їcторї ==
 [[Видъ:Honduras 1866A.svg|thumb|left|Ондѹраса давьно знамѧ (1866)]]
-Лѣта 1525 землѩ въшьли бѣашѧ въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ чѧсть [[Меѯика|Меѯици]] сталъ бѣ. О лѣта 1823 до лѣта 1839  Ондѹрасъ съставѣ Ѥдьнѥнъ Дрьжавъ Срѣднѩ Америци бѣ. Лѣта 1839 Ондѹрасъ сътворѥнъ самостотельна дрьжава ѥстъ.
+Лѣта 1525 землѩ въшьли бѣашѧ въ съставъ Кралѥвьства [[Їспанї]]. Лѣта 1821 Ондѹрасъ [[Меѯїко|Меѯїка]] чѧсть сталъ бѣ. О лѣта 1823 до лѣта 1839  Ондѹрасъ съставѣ [[Срѣдьнѩ Амерїкы Ѥдьнѥны Дрьжавы|Срѣдьнѩ Амерїкы Ѥдьненъ Дрьжавъ]] бѣ. Лѣта 1839 Ондѹрасъ сътворѥнъ самостотельна дрьжава ѥстъ.
 
 == Зьри такожде ==
 
