--- a/Канада.mw
+++ b/Канада.mw
@@ -9,7 +9,7 @@
 | Людии = 32,9 леѡдръ
 | Почѧта = 1867
 }}
-'''Канада''' ({{Lang-en|Canada}}) [[Сѣверьна Амерїка|Сѣверьны Амерїкы]] сѣвера дрьжава ѥстъ. Стольнъ градъ [[Оттава]] ѥстъ. Дрьжавьни ѩзыка [[Англїискъ ѩзыкъ|англїискъ]] и [[Франкїискъ ѩзыкъ|франкїискъ]] ѥсте. Людии обитаѥтъ 32,9 леѡдръ.
+'''Канада''' ({{Lang-en|Canada}}) [[Сѣверьна Амерїка|Сѣверьны Амерїкы]] сѣвера дрьжава ѥстъ. Стольнъ градъ [[Оттава]] ѥстъ. Дрьжавьна ѩзыка [[Англїискъ ѩзыкъ|англїискъ]] и [[Франкїискъ ѩзыкъ|франкїискъ]] ѥсте. Людии обитаѥтъ 32,9 леѡдръ.
 
 [[Category:Страны]]
 
