*Empty MediaWiki Message*

--- a/Роусє.mw
+++ b/Роусє.mw
@@ -1,5 +1,17 @@
-'''Рѹсе''' [[Блъгарї|Блъгарїѧ]] градъ ѥстъ. Людии обитаѥтъ 150 тысѫщь.
+{{Градъ|Имѧ = Рѹсе
+| знамѧ= 
+| знакъ = Rousse-coat-of-arms.svg
+| Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарї]]
+| Глава = 
+| Людии =  178 тысѫщь
+| Основанъ = 
+| Харта =[[Видъ:Ruse location in Bulgaria.png|200px]]
+|}}
+'''Рѹсе''' ({{lang-bg|Русе}}) [[Блъгарї|Блъгарїѩ]] градъ ѥстъ. Людии обитаѥтъ 178 тысѫщь<ref>http://www.grao.government.bg/tna/tab02.txt</ref>. Построѥнъ ѥстъ рѣцѣ [[Дѹнавъ|Дѹнавѣ]].
 
+== Зьри такожде ==
+{{commonscat|Rousse}}
+<references />
 [[Катигорї:Гради]]
 [[Катигорї:Блъгарї]]
 
