*Empty MediaWiki Message*

--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -1,14 +1,15 @@
 {{Градъ|Имѧ = Люблна
-| знамѧ= 
+| знамѧ= Flag of Ljubljana.gif
 | знакъ = Знакъ Люблньскъ.png
-| Дрьжава = Їллѷрїиска Словѣнї
+| Дрьжава = {{Їллѷрїискы Словѣнїѩ знамѧ}} [[Їллѷрїиска Словѣнї]]
 | Глава = 
-| Людии = 
+| Людии = 258 873
 | Основанъ = 1144
 | Харта = [[Видъ:Karte Ljubljana si.png|200 px]]
 |}}
-'''Люблна''' стольнъ градъ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] ѥсть. Люблна построѥна ѥстъ рѣцѣ [[Люблѩнїца(рѣка)|Люблницѣ]] лѣта 1144.
+'''Люблна''' ({{lang-sl|Ljubljana}}) стольнъ градъ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїѩ]] ѥсть. Люблна построѥна ѥстъ рѣцѣ [[Люблѩнїца(рѣка)|Люблницѣ]] лѣта 1144. Людии обитаѥтъ 258 873.
 
+{{commonscat|Ljubljana}}
 [[Катигорї:Гради]]
 [[Катигорї:Їллѷрїиска Словѣнї| ]]
 [[Category:Стольни гради]]
