*Empty MediaWiki Message*

--- a/Роусьсци.mw
+++ b/Роусьсци.mw
@@ -1,4 +1,4 @@
-'''Рѹсьци''' (людиѥ) ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''русские'') въсточьнословѣньскъ народъ ѥстъ. Своѥ имѧ рѹсьци от имене древл҄ьн҄ѩ страны и дрьжавы [[Рѹсь|Рѹси]] имѫтъ, же древл҄ьн҄ь [[рѹси|рѹсъ]] съборьно имѧ бѣаше. Чисменьмь рѹсьскъ до 150 леѡдръ сѫтъ, ихъже до 115 леѡдръ [[Рѡсї|Рѡсїи]] живетъ. Вѣрьни [[Богъ|Богѹ]] людиѥ бол҄ьшемь чисменьмь [[Православиѥ|православьни]] сѫтъ.
+'''Рѹсьци''' (людиѥ) ({{lang-ru|русские}}) въсточьнословѣньскъ народъ ѥстъ. Своѥ имѧ рѹсьци от имене древл҄ьн҄ѩ страны и дрьжавы [[Рѹсь|Рѹси]] имѫтъ, же древл҄ьн҄ь [[рѹси|рѹсъ]] съборьно имѧ бѣаше. Чисменьмь рѹсьскъ до 150 леѡдръ сѫтъ, ихъже до 115 леѡдръ [[Рѡсї|Рѡсїи]] живетъ. Вѣрьни [[Богъ|Богѹ]] людиѥ бол҄ьшемь чисменьмь [[Православиѥ|православьни]] сѫтъ.
 
 [[Category:Словѣне]]
 [[Category:Народи]]
