--- a/Їллѷрїиска_Словѣнїꙗ.mw
+++ b/Їллѷрїиска_Словѣнїꙗ.mw
@@ -9,8 +9,12 @@
 | Людии = 2 леѡдръ
 | Почѧта = 1991
 }}
-'''Їллѷрїиска Словѣнї''' ({{lang-sl|Slovénija или Republika Slovénija}}, [[словѣньскъ ѩзыкъ|словѣньскы]] назъвана «Їллѷрїиска» да бѣжали бѫ о съмѣшени съ Карпатьскоѭ словѣньскоѭ дрьжавоѭ и ѥю ѩзыкѹ именьма) срѣдьнѩ Еѵрѡпы южьна словѣньска дрьжава ѥстъ. Ѥѩ стольнъ градь [[Люблна]] ѥстъ.
+'''Їллѷрїиска Словѣнї''' ({{lang-sl|Slovénija или Republika Slovénija}}) срѣдьнѩ Еѵрѡпы южьна словѣньска дрьжава ѥстъ. Ѥѩ стольнъ градь [[Люблна]] ѥстъ.
 Їллѷрїискы Словѣнїѩ дрьжавьнъ ѩзыкъ ѥстъ [[їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]]. Їллѷрїискы Словѣнїи людии 2 леѡдръ обитаѥтъ.
+
+==Имѧ==
+
+Си Словѣнї [[словѣньскъ ѩзыкъ|словѣньскы]] волеѭ назъвана «Їллѷрїиска» ѥстъ, да бѣжали бѫ о съмѣшени съ [[Словѣньско|Карпатьскоѭ словѣньскоѭ]] дрьжавоѭ и ѥю ѩзыкѹ именьма.
 
 == Їсторї ==
 
