--- a/Словѣнє_(Їллѷрїисци).mw
+++ b/Словѣнє_(Їллѷрїисци).mw
@@ -1,4 +1,4 @@
-'''Їллѷрїиско-словѣне''' ({{lang-sl|Slovenci}}, нарицаѥми словѣньскы «їллѷрїисци», да бѣжали о съмѣшени съ [[Словѣне (Карпатьсци)|карпатьскыихъ словѣнъ]] именьмь бѫ) южьнословѣньскъ народъ ѥстъ. Їллѷрїиcко-словѣнъ родьнъ ѩзыкъ [[Їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]] ѥстъ.  Чисменьмь їллѷрїиско-словѣнъ до 2 леѡдръ сѫтъ, ихъже до 1,6 леѡдръ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїи]] живетъ. Вѣрьни [[Богъ|Богѹ]] людиѥ бол҄ьшемь чисменьмь [[Римьскъ Каѳолїкїсмъ|каѳолїкы]] сѫтъ.
+'''Їллѷрїиско-словѣне''' ({{lang-sl|Slovenci}}, нарицаѥми словѣньскы «їллѷрїисци», да бѣжали о съмѣшени съ [[Словѣне (Карпатьсци)|карпатьскъ словѣнъ]] именьмь бѫ) южьнословѣньскъ народъ ѥстъ. Їллѷрїиcкыихъ словѣнъ [[Їллѷрїиско-словѣньскъ ѩзыкъ|їллѷрїиско-словѣньскъ]] родьнъ ѩзыкъ ѥстъ. Чисменьмь їллѷрїискыихъ словѣнъ до 2 леѡдрѹ ѥсте, из еюже до 1,6 леѡдръ [[Їллѷрїиска Словѣнї|Їллѷрїискы Словѣнїи]] обитаѥтъ. Вѣрьни [[Богъ|Богѹ]] людиѥ бол҄ьшемь чисменьмь [[Римьскъ Каѳолїкїсмъ|каѳолїци]] сѫтъ.
 
 [[Category:Словѣне]]
 [[Category:Їллѷрїиска Словѣнї]]
