--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,13 +1,13 @@
 {{Градъ|Имѧ = Съкопиѥ
 | знамѧ= Flag of Skopje.png
 | знакъ = Coat of arms of Skopje.png
-| Дрьжава = Македонї
+| Дрьжава ={{Македонїѩ знамѧ}} Македонї
 | Глава = 
 | Людии = 521 569  
 | Основанъ = лѣта 3500 до х҃р
 | Харта = [[Видъ:MKD muni nonn(Skopje).png|200px]]
 }}
-'''Съкопиѥ''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Скопје'') градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 3500 до х҃р ѥстъ
+'''Съкопиѥ''' ({{lang-mk|Скопје}}) градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 3500 до х҃р ѥстъ
 
 {{Commonscat|Skopje}}
 [[Category:Гради]]
