*Empty MediaWiki Message*

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -1,4 +1,13 @@
-'''Прилѣпъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+{{Градъ|Имѧ = Прилѣпъ
+| знамѧ= 
+| знакъ = MMCA(Prilep).png
+| Дрьжава ={{Македонїѩ знамѧ}} [[Македонї]]
+| Глава = 
+| Людии = 73 925  
+| Основанъ = 
+| Харта = [[Видъ:MK Prilep.png|200px]]
+}}
+'''Прилѣпъ''' ({{lang-mk|Прилеп}}) ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии обитаѥтъ 74 тысѫщи.
 [[Category:Гради]]
 [[Category:Македонї]]
 
