*Empty MediaWiki Message*

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -10,6 +10,7 @@
 '''Съкопиѥ''' ({{lang-mk|Скопје}}) градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ, [[Македонї|Македонїѩ]] стольнъ градъ ѥстъ. Людии обитаѥтъ 521 тысѧщѧ. Основанъ лѣта 3500 до х҃р ѥстъ
 
 {{Commonscat|Skopje}}
+{{Гради македоньсци}}
 [[Category:Гради]]
 [[Category:Стольни гради]]
 [[Category:Македонї]]
