*Empty MediaWiki Message*

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -8,6 +8,8 @@
 | Харта = [[Видъ:MK Prilep.png|200px]]
 }}
 '''Прилѣпъ''' ({{lang-mk|Прилеп}}) ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии обитаѥтъ 74 тысѫщи.
+
+{{Гради македоньсци}}
 [[Category:Гради]]
 [[Category:Македонї]]
 
