*Empty MediaWiki Message*

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -9,6 +9,8 @@
 }}
 '''Прилѣпъ''' ({{lang-mk|Прилеп}}) ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии обитаѥтъ 74 тысѫщи.
 
+== Зьри такожде ==
+
 {{Гради македоньсци}}
 [[Category:Гради]]
 [[Category:Македонї]]
