*Empty MediaWiki Message*

--- a/Охрїдъ.mw
+++ b/Охрїдъ.mw
@@ -1,13 +1,17 @@
 {{Градъ|Имѧ = Охридъ
 | знамѧ= Flag of Ohrid.gif
 | знакъ = Coat of Arms of Ohrid.png
-| Дрьжава = Македонї
+| Дрьжава = {{Македонїѩ знамѧ}} [[Македонї]]
 | Глава = Алеѯандръ Петрески
 | Людии = 55,700 
 | Основанъ = 
 | Харта = [[Видъ:MK Ohrid.png|250px]]
 }}
-'''Охридъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. Охридѣ людии 55,700 обитаѥтъ.
+'''Охридъ''' ({{lang-mk|Охрид}} ѥстъ градъ [[Македонїıа|Македонїѩ]]. Охридѣ людии 55,700 обитаѥтъ. [[Блъгарьско Цѣсарьство|Блъгарїѩ]] стольнъ градъ междѹ 990—1015 лѣты бѣ. 
+
+== Зьри такожде ==
+{{Гради македоньсци}}
+{{commonscat|Ohrid}}
 [[Category:Гради]]
 [[ru:Охрид]]
 [[be-x-old:Охрыд]]
