*Empty MediaWiki Message*

--- a/Коуманово.mw
+++ b/Коуманово.mw
@@ -8,6 +8,8 @@
 | Харта = [[Видъ:MK Kumanovo.png|250px]]
 }}
 '''Кѹманово''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии 105 484 обитаѥтъ. Кѹманово Македонїѩ бол҄ии градъ по [[Съкопиѥ|Съкопии]] ѥстъ
+== Зьри такожде ==
+{{Гради македоньсци}}
 [[Category:Гради]]
 
 [[bg:Куманово (град)]]
