*Empty MediaWiki Message*

--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -1,13 +1,15 @@
 {{Градъ|Имѧ = Виньница
 | знамѧ= 
 | знакъ = 
-| Дрьжава = Македонї
+| Дрьжава = {{Македонїѩ знамѧ}} [[Македонї]]
 | Глава = 
 | Людии = 14 200
 | Основанъ = 
 | Харта = 
 }}
-'''Виньница''' ѥстъ градъ [[Македонї|Македонїѩ]]. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
+'''Виньница''' ({{lang-mk|Виница}} [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
+== Зьри такожде ==
+{{Гради македоньсци}}
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
