*Empty MediaWiki Message*

--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = 
 }}
-'''Виньница''' ({{lang-mk|Виница}} [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
+'''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
 == Зьри такожде ==
 {{Гради македоньсци}}
 [[Category:Гради]]
