*Empty MediaWiki Message*

--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -1,15 +1,16 @@
 {{Градъ|Имѧ = Виньница
 | знамѧ= 
-| знакъ = 
+| знакъ = VinicaCoat.png
 | Дрьжава = {{Македонїѩ знамѧ}} [[Македонї]]
 | Глава = 
 | Людии = 14 200
 | Основанъ = 
-| Харта = 
+| Харта = [[Видъ:MK Vinica.png|200px]]
 }}
 '''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
 == Зьри такожде ==
 {{Гради македоньсци}}
+{{commonscat|Vinica (Republic of Macedonia)}}
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
