--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Хръватьска
+{{Дрьжава|name = Хръватьска<br>Republika Hrvatska
 | знамѧ= [[Видъ:Flag_of_Croatia.svg|150px]]
 | знакъ = [[image:Croatian Coat of Arms.svg|80px]]
 | map = LocationCroatia.svg 
@@ -9,7 +9,7 @@
 | Людии =  
 | Почѧта = 
 }}
-'''Хръватьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ. [[хръватьскъ ѩзыкъ|хрьватьскы]] ''Republika Hrvatska''.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
+'''Хръватьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ  {{lang-hr|Republika Hrvatska}}.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
 
 {{Словѣньскы дрьжавы}}
 [[Category:Хръватьска| ]]
