*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -9,7 +9,7 @@
 | Людии =  
 | Почѧта = 
 }}
-'''Хръватьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ  {{lang-hr|Republika Hrvatska}}.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
+'''Хръватьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ; {{lang-hr|Republika Hrvatska}}.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
 
 {{Словѣньскы дрьжавы}}
 [[Category:Хръватьска| ]]
