Образьць и речениѥ исправихъ.

--- a/Прилѣпъ.mw
+++ b/Прилѣпъ.mw
@@ -7,11 +7,11 @@
 | Основанъ = 
 | Харта = [[Видъ:MK Prilep.png|200px]]
 }}
-'''Прилѣпъ''' ({{lang-mk|Прилеп}}) ѥстъ градъ [[Македонїıа|Македонїѩ]]. Людии обитаѥтъ 74 тысѫщи.
+'''Прилѣпъ''' ({{lang-mk|Прилеп}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 74 тысѫщи.
 
 == Зьри такожде ==
 
-{{Гради македоньсци}}
+{{Македонїѩ гради}}
 [[Category:Гради]]
 [[Category:Македонї]]
 
