Образьць и речениѥ исправихъ.

--- a/Охрїдъ.mw
+++ b/Охрїдъ.mw
@@ -7,10 +7,10 @@
 | Основанъ = 
 | Харта = [[Видъ:MK Ohrid.png|250px]]
 }}
-'''Охридъ''' ({{lang-mk|Охрид}} ѥстъ градъ [[Македонїıа|Македонїѩ]]. Охридѣ людии 55,700 обитаѥтъ. [[Блъгарьско Цѣсарьство|Блъгарїѩ]] стольнъ градъ междѹ 990—1015 лѣты бѣ. 
+'''Охридъ''' ({{lang-mk|Охрид}} [[Македонїıа|Македонїѩ]] градъ ѥстъ. Охридѣ людии 55,700 обитаѥтъ. [[Блъгарьско Цѣсарьство|Блъгарьска Цѣсарьства]] стольнъ градъ междѹ 990—1015 лѣты бѣ. 
 
 == Зьри такожде ==
-{{Гради македоньсци}}
+{{Македонїѩ гради}}
 {{commonscat|Ohrid}}
 [[Category:Гради]]
 [[ru:Охрид]]
