--- a/Коуманово.mw
+++ b/Коуманово.mw
@@ -9,7 +9,7 @@
 }}
 '''Кѹманово''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. Людии 105 484 обитаѥтъ. Кѹманово Македонїѩ бол҄ии градъ по [[Съкопиѥ|Съкопии]] ѥстъ
 == Зьри такожде ==
-{{Гради македоньсци}}
+{{Македонїѩ гради}}
 [[Category:Гради]]
 
 [[bg:Куманово (град)]]
