Образьць допьсахъ, речениѥ исправихъ.

--- a/Строуга.mw
+++ b/Строуга.mw
@@ -1,4 +1,5 @@
-'''Стрѹга''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Стрѹга''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
 
 [[bg:Струга]]
