Образьць допьсахъ, речениѥ исправихъ.

--- a/Рѣсьнъ.mw
+++ b/Рѣсьнъ.mw
@@ -1,4 +1,5 @@
-'''Ресенъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Ресенъ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ. 
+{{Македонїѩ гради}}
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
