Образьць допьсахъ, речениѥ исправихъ.

--- a/Доиранъ.mw
+++ b/Доиранъ.mw
@@ -1,2 +1,3 @@
-'''Доиранъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Доиранъ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
