Образьць допьсахъ, речениѥ исправихъ.

--- a/Хътѣтово.mw
+++ b/Хътѣтово.mw
@@ -1,4 +1,5 @@
-'''Тетово''' ѥстъ градъ [[Македонї|Македонїѩ]]. 
+'''Тетово''' [[Македонї|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
 [[Category:Македонї]]
 
