Образьць допьсахъ, речениѥ исправихъ.

--- a/Гостивар҄ь.mw
+++ b/Гостивар҄ь.mw
@@ -1,2 +1,3 @@
-'''Гостивар̑ь''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Гостивар̑ь''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
