Образьць допьсахъ, речениѥ исправихъ.

--- a/Дєбаръ.mw
+++ b/Дєбаръ.mw
@@ -1,2 +1,3 @@
-'''Дебаръ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Дебаръ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
