Образьць допьсахъ, речениѥ исправихъ.

--- a/Гєѵгєла.mw
+++ b/Гєѵгєла.mw
@@ -1,2 +1,3 @@
-'''Геѵгели''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Геѵгела́''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
