--- a/Кꙑчєво.mw
+++ b/Кꙑчєво.mw
@@ -1,2 +1,3 @@
-'''Кичево''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Кичево''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
