Образьць допьсахъ, речениѥ исправихъ.

--- a/Бєрово.mw
+++ b/Бєрово.mw
@@ -1,2 +1,3 @@
-'''Берово''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Берово''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
