Образьць допьсахъ, речениѥ исправихъ.

--- a/Дѣльчєво.mw
+++ b/Дѣльчєво.mw
@@ -1,2 +1,3 @@
-'''Дельчево''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Дельчево''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
