Образьць допьсахъ, речениѥ исправихъ.

--- a/Богоданьци.mw
+++ b/Богоданьци.mw
@@ -1,3 +1,4 @@
-'''Богоданьци''' ѥстъ градъ [[Македонї|Македонїѩ]]. 
+'''Богоданьци''' [[Македонї|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
 [[Category:Македонї]]
