--- a/Свѧтꙑи_Нїколаи_·_градъ.mw
+++ b/Свѧтꙑи_Нїколаи_·_градъ.mw
@@ -1,2 +1,3 @@
-'''Свѧтыи Нїколаи''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Свети Николе'') [[Македонїıа|Македонїѩ]] градъ ѥстъ. 
+'''Свѧтыи Нїколаи''' ([[македоньскъ ѩзыкъ|македоньскы]] ''Свети Николе'') [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
