--- a/Дємиръ_Капиꙗ.mw
+++ b/Дємиръ_Капиꙗ.mw
@@ -1,4 +1,5 @@
-'''Демиръ Капи''' ({{Lang-mk|Демир Капија}}, [[тѷрчьскъ ѩзыкъ|тѷрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонї|Македонїѩ]] градъ ѥстъ. 
+'''Демиръ Капи''' ({{Lang-mk|Демир Капија}}, [[тѷрчьскъ ѩзыкъ|тѷрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонї|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
 [[Category:Македонї]]
 
