Образьць допьсахъ, блазны исправихъ.

--- a/Щипъ.mw
+++ b/Щипъ.mw
@@ -7,7 +7,7 @@
 | Основанъ =  г҃ вѣкъ до х҃р
 | Харта = [[Видъ:MK Stip.png|200 px]]
 |}}
-'''Щипъ''' ѥстъ градъ [[Македонї|Македонїѩ]]. Людии обитаѥтъ 43 тысѫщи.
+'''Щипъ''' [[Македонї|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 43 тысѫщѧ.
 [[Category:Гради]]
 [[en:Štip]]
 [[bg:Щип]]
