--- a/Щипъ.mw
+++ b/Щипъ.mw
@@ -8,6 +8,7 @@
 | Харта = [[Видъ:MK Stip.png|200 px]]
 |}}
 '''Щипъ''' [[Македонї|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 43 тысѫщѧ.
+{{Македонїѩ гради}}
 [[Category:Гради]]
 [[en:Štip]]
 [[bg:Щип]]
