Образьць допьсахъ, речениѥ исправихъ.

--- a/Кочани.mw
+++ b/Кочани.mw
@@ -1,4 +1,5 @@
-'''Кочани''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Кочани''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
 [[Катигорї:Македонї]]
 
