--- a/Валандово.mw
+++ b/Валандово.mw
@@ -1,4 +1,5 @@
-'''Валандово''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Валандово''' ѥстъ градъ [[Македонїıа|Македонїѩ]].
+{{Македонїѩ гради}}
 [[Category:Гради]]
 
 [[bg:Валандово]]
