Образьць и блазны исправихъ.

--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:MK Vinica.png|200px]]
 }}
-'''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Дьньсь Виньницѣ людии 14 тысѧщь обитаѥтъ
+'''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 14 тысѫщѧ.
 == Зьри такожде ==
 {{Гради македоньсци}}
 {{commonscat|Vinica (Republic of Macedonia)}}
