--- a/Виньница_·_Макєдонїи.mw
+++ b/Виньница_·_Макєдонїи.mw
@@ -9,7 +9,7 @@
 }}
 '''Виньница''' ({{lang-mk|Виница}}) [[Македонї|Македонїѩ]] Виньницкы чѧсти главьнъ градъ ѥстъ. Людии обитаѥтъ 14 тысѫщѧ.
 == Зьри такожде ==
-{{Гради македоньсци}}
+{{Македонїѩ гради}}
 {{commonscat|Vinica (Republic of Macedonia)}}
 [[Category:Гради]]
 [[Катигорї:Македонї]]
