Образьць допьсахъ, речениѥ исправихъ.

--- a/Крива_Паланъка.mw
+++ b/Крива_Паланъка.mw
@@ -1,2 +1,3 @@
-'''Крива Паланка''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Крива Паланка''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
