Образьць допьсахъ, речениѥ исправихъ.

--- a/Макєдоньска_Камєница.mw
+++ b/Макєдоньска_Камєница.mw
@@ -1,2 +1,3 @@
-'''Македоньска Каменица''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Македоньска Каменица''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
