Образьць допьсахъ, речениѥ исправихъ.

--- a/Отєшєво.mw
+++ b/Отєшєво.mw
@@ -1,2 +1,3 @@
-'''Отешево''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Отешево''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
