Образьць допьсахъ, речениѥ исправихъ.

--- a/Макєдоньскъ_Бродъ.mw
+++ b/Макєдоньскъ_Бродъ.mw
@@ -1,2 +1,3 @@
-'''Македоньскъ Бродъ''' ѥстъ градъ [[Македонїıа|Македонїѩ]]. 
+'''Македоньскъ Бродъ''' [[Македонїıа|Македонїѩ]] градъ ѥстъ.
+{{Македонїѩ гради}} 
 [[Category:Гради]]
