*Empty MediaWiki Message*

--- a/Охрїдъ.mw
+++ b/Охрїдъ.mw
@@ -7,7 +7,7 @@
 | Основанъ = 
 | Харта = [[Видъ:MK Ohrid.png|250px]]
 }}
-'''Охридъ''' ({{lang-mk|Охрид}} [[Македонїıа|Македонїѩ]] градъ ѥстъ. Охридѣ людии 55,700 обитаѥтъ. [[Блъгарьско Цѣсарьство|Блъгарьска Цѣсарьства]] стольнъ градъ междѹ 990—1015 лѣты бѣ. 
+'''Охридъ''' ({{lang-mk|Охрид}}) [[Македонїıа|Македонїѩ]] градъ ѥстъ. Охридѣ людии 55,700 обитаѥтъ. [[Блъгарьско Цѣсарьство|Блъгарьска Цѣсарьства]] стольнъ градъ междѹ 990—1015 лѣты бѣ. 
 
 == Зьри такожде ==
 {{Македонїѩ гради}}
