robot  Adding: [[fa:نیژنی نووگورود]]

--- a/Нижьн҄ии_Новъ_Градъ.mw
+++ b/Нижьн҄ии_Новъ_Градъ.mw
@@ -27,6 +27,7 @@
 [[eo:Niĵnij Novgorod]]
 [[es:Nizhny Nóvgorod]]
 [[et:Nižni Novgorod]]
+[[fa:نیژنی نووگورود]]
 [[fi:Nižni Novgorod]]
 [[fr:Nijni-Novgorod]]
 [[he:ניז'ני נובגורוד]]
