*Empty MediaWiki Message*

--- a/Лоуга_·_Рѡсїи.mw
+++ b/Лоуга_·_Рѡсїи.mw
@@ -1,6 +1,6 @@
 {{Градъ|Имѧ = Лѹга
 | знамѧ=
-| знакъ =Изображение:Coat of Arms of Luga (Leningrad oblast) (1781).png
+| знакъ =Coat of Arms of Luga (Leningrad oblast) (1781).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} [[Рѡсї]]
 | Глава = Владимиръ Бакѹневъ
 | Людии = 39,4 тысѫщи
