--- a/Лоуга_·_Рѡсїи.mw
+++ b/Лоуга_·_Рѡсїи.mw
@@ -2,10 +2,10 @@
 | знамѧ=
 | знакъ =Coat of Arms of Luga (Leningrad oblast) (1781).png
 | Дрьжава = {{Рѡсїѩ знамѧ}} [[Рѡсї]]
-| Глава = Владимиръ Бакѹневъ
-| Людии = 39,4 тысѫщи
+| Глава = Владимиръ Бакѹн҄евъ
+| Людии = 39,4 тысѫщѧ
 | Основанъ = 947
 | Нареченъ градъ = 1777
 | map = 
 |}}
-Лѹга ({{lang-ru|Луга}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Лѹжьска чѧсть|Лѹжьскы чѧсти]] главьнъ градъ ѥстъ. Лѹга помѣновена запрьва лѣтописи лѣта 947 ѥстъ, наречена градъ съ лѣта 1777 ѥстъ. Построѥна рѣцѣ [[Лѹга (рѣка)|Лѹѕѣ]] ѥстъ. Людии обитаѥтъ 39,4 тысѫщи.
+Лѹга ({{lang-ru|Луга}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Лѹжьска чѧсть|Лѹжьскы чѧсти]] главьнъ градъ ѥстъ. Лѹга помѣновена запрьва лѣтописи лѣта 947 ѥстъ, наречена градъ съ лѣта 1777 ѥстъ. Построѥна рѣцѣ [[Лѹга (рѣка)|Лѹѕѣ]] ѥстъ. Людии обитаѥтъ 39,4 тысѫщѧ.
