*Empty MediaWiki Message*

--- a/Кириши.mw
+++ b/Кириши.mw
@@ -3,8 +3,9 @@
 | знакъ = Coat of Arms of Kirishi (Leningrad oblast).png
 | Дрьжава = {{Рѡсїѩ знамѧ}}[[Рѡсї]]
 | Глава = 
-| Людии = 55,4 тысѫщь
+| Людии = 55,4 тысѫщѧ
 | Основанъ = 1693
+| Нареченъ градъ = 1965
 | map = 
 |}}
 '''Кириши''' ({{lang-ru|Кириши}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Киришьска чѧсть|Киришьскы чѧсти]] главьнъ градъ ѥстъ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховъ]] ѥстъ, людии обитаѥтъ 55 тысѫщь. Основанъ ѥстъ лѣта 1693, ѹничьженъ бѣ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]]. Послѣди сънова сътворенъ бѣ и нареченъ градъ лѣта 1965.
