*Empty MediaWiki Message*

--- a/Лоуга_·_Рѡсїи.mw
+++ b/Лоуга_·_Рѡсїи.mw
@@ -8,4 +8,6 @@
 | Нареченъ градъ = 1777
 | map = 
 |}}
+{{дрѹѕи съмысли}}
 Лѹга ({{lang-ru|Луга}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Лѹжьска чѧсть|Лѹжьскы чѧсти]] главьнъ градъ ѥстъ. Лѹга помѣновена запрьва лѣтописи лѣта 947 ѥстъ, наречена градъ съ лѣта 1777 ѥстъ. Построѥна рѣцѣ [[Лѹга (рѣка)|Лѹѕѣ]] ѥстъ. Людии обитаѥтъ 39,4 тысѫщѧ.
+[[ru:Луга]]
