--- a/Кириши.mw
+++ b/Кириши.mw
@@ -8,7 +8,7 @@
 | Нареченъ градъ = 1965
 | map = 
 |}}
-'''Кириши''' ({{lang-ru|Кириши}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Киришьска чѧсть|Киришьскы чѧсти]] главьнъ градъ ѥстъ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховъ]] ѥстъ, людии обитаѥтъ 55 тысѫщь. Основанъ ѥстъ лѣта 1693, ѹничьженъ бѣ по [[Вътора Свѣтьна Воина|Въторыѩ Свѣтьныѩ Воины]]. Послѣди сънова сътворенъ бѣ и нареченъ градъ лѣта 1965.
+'''Кириши''' ({{lang-ru|Кириши}}) [[Рѡсї|Рѡсїѩ]] [[Лениноградьска область|Лениноградьскы области]] [[Киришьска чѧсть|Киришьскы чѧсти]] главьнъ градъ ѥстъ. Построѥнъ рѣцѣ [[Волховъ (рѣка)|Волховѣ]] ѥстъ. Людии обитаѥтъ 55 тысѫщь. Основанъ ѥстъ лѣта 1693, ѹничьженъ бѣ по [[Вътора Свѣтьна Воина|Въторѣи Свѣтьнѣи Воинѣ]], а послѣди пакы сътворенъ ѥстъ. Нареченъ градъ лѣта 1965 ѥстъ.
 
 [[Катигорї:Гради]]
 [[Катигорї:Лениноградьска область]]
