*Empty MediaWiki Message*

--- a/Дємиръ_Капиꙗ.mw
+++ b/Дємиръ_Капиꙗ.mw
@@ -1,4 +1,16 @@
-'''Демиръ Капи''' ({{Lang-mk|Демир Капија}}, [[тѷрчьскъ ѩзыкъ|тѷрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонї|Македонїѩ]] градъ ѥстъ.
+{{Градъ|Имѧ = Демиръ Капи
+| знамѧ= 
+| знакъ = Demir-Kapiya-Gerb.jpg
+| Дрьжава ={{Македонїѩ знамѧ}} [[Македонї]]
+| Глава = 
+| Людии = 3275 
+| Основанъ = 
+| Харта = 
+}}
+'''Демиръ Капи''' ({{Lang-mk|Демир Капија}}, [[тѷрчьскъ ѩзыкъ|тѷрчьска]] ѩзыка словесѣ «Желѣзна врата») [[Македонї|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 3275. Построѥнъ ѥстъ рѣцѣ [[Вардаръ|Вардарѣ]].
+
+== Зьри такожде ==
+
 {{Македонїѩ гради}}
 [[Category:Гради]]
 [[Category:Македонї]]
