*Empty MediaWiki Message*

--- a/Щипъ.mw
+++ b/Щипъ.mw
@@ -7,7 +7,9 @@
 | Основанъ =  г҃ вѣкъ до х҃р
 | Харта = [[Видъ:MK Stip.png|200 px]]
 |}}
-'''Щипъ''' [[Македонї|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 43 тысѫщѧ.
+'''Щипъ''' ({{lang-mk|Штип}}) [[Македонї|Македонїѩ]] градъ ѥстъ. Людии обитаѥтъ 43 тысѫщѧ. Построѥнъ рѣцѣ [[Брегалница|Брегалницѣ]] ѥстъ.
+
+== Зьри такожде ==
 {{Македонїѩ гради}}
 [[Category:Гради]]
 [[en:Štip]]
