--- a/Дрєвл҄ьнѥновоградьскъ_ѩꙁꙑкъ.mw
+++ b/Дрєвл҄ьнѥновоградьскъ_ѩꙁꙑкъ.mw
@@ -1,12 +1,14 @@
 '''Древл҄ьнѥновоградьскъ ѩзыкъ''' обычаѥмь [[Древл҄ьн҄ь рѹсьскъ ѩзыкъ|древл҄ьнѥрѹсьска]] ѩзыка дїалектомь мьнѧтъ, имьже бесѣдовали древл҄ьн҄и [[Новъ Градъ|Новѣ Градѣ]] и древл҄ьнѧ [[Новоградьска земл|Новоградьскы землѩ]] ѥмѹ прилежѧщихъ мѣстѣхъ бѣашѧ.
 Вѣдомыи бол҄ьшеѭ чѧстиѭ по [[брѣстѣны грамоты|брѣстѣнамъ грамотамъ]] ѥстъ, обрѣтеныимъ Новѣ Градѣ и [[Стара Рѹса|Старѣ Рѹсѣ]], а приѹроченыимъ при А҃І—Е҄І сътолѣтиихъ.
 [[Category:Словѣньсци ѩзыци]]
-[[ru:Древненовгородский диалект]]
+
 [[cs:Staronovgorodský dialekt]]
 [[de:Altnowgoroder Dialekt]]
 [[en:Old Novgorod dialect]]
 [[hsb:Stara Nowgorodska narěč]]
+[[it:Antico dialetto di Novgorod]]
 [[lt:Senasis Naugardo dialektas]]
 [[nl:Oudnovgorods]]
+[[ru:Древненовгородский диалект]]
 [[sk:Staronovgorodský dialekt]]
 [[uk:Давньоновгородський діалект]]
